# taiwan-stock-monitor

./: LICENSE  README.md  downloader_cn.py  downloader_hk.py  downloader_jp.py  notifier.py  pyproject.toml  requirements.txt
.github/workflows/: daily_report.yml
