[project]
name = "taiwan-stock-monitor"
version = "0.1.0"
description = "自動化台股全方位監控系統"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pykrx>=1.0.51",
    "resend>=2.19.0",
    "tokyo-stock-exchange>=0.0.3",
    "tqdm>=4.67.1",
    "yfinance>=1.0",
]
